public class HashNode<K> {
    K key;
    public HashNode(K key) {
        this.key = key;
    }
}
